--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>alura</title>
+    <title>alura jof</title>
 </head>
 <body>
-    
+    <main>
+<section id="container">
+    <article class="cartão">
+        <div class="cartão__conteudo">
+<h3>programação</h3>
+<div class="cartão__conteudo">
+
+</div>
+</div>
+    </article>
+</section>
+    </main>
+    <footer>
+<p>projeto do alura do Miguel Inacio Barbosa, sem fins lucrativos</p>
+    </footer>
 </body>
 </html>
