--- a/index.html
+++ b/index.html
@@ -12,12 +12,44 @@
         <div class="cartão__conteudo">
 <h3>programação</h3>
 <div class="cartão__conteudo">
-
+ O que é JavaScript?
 </div>
+<div class="cartao__conteudo__resposta"></div>
+O CSS é uma linguagem de estilização
+</div> 
+    </article>
+    article class="cartão">
+        <div class="cartão__conteudo">
+<h3>programação</h3>
+<div class="cartão__conteudo">
+ Faz quanto tempo que o Brazil não gonha uma copa?
 </div>
+<div class="cartao__conteudo__resposta"></div>
+O CSS é uma linguagem de estilização
+</div> 
+    </article>
+article class="cartão">
+        <div class="cartão__conteudo">
+<h3>programação</h3>
+<div class="cartão__conteudo">
+ Quem é o tecnico do brasil hoje em dia?
+</div>
+<div class="cartao__conteudo__resposta"></div>
+O CSS é uma linguagem de estilização
+</div> 
+    </article>
+    article class="cartão">
+        <div class="cartão__conteudo">
+<h3>programação</h3>
+<div class="cartão__conteudo">
+ Quantos gols o Brasil fez n acopa passada?
+</div>
+<div class="cartao__conteudo__resposta"></div>
+O CSS é uma linguagem de estilização
+</div> 
     </article>
 </section>
-    </main>
+    </main> 
     <footer>
 <p>projeto do alura do Miguel Inacio Barbosa, sem fins lucrativos</p>
     </footer>
