--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>alura jof</title>
 </head>
 <body>
@@ -43,6 +46,62 @@ O CSS é uma linguagem de estilização
 <h3>programação</h3>
 <div class="cartão__conteudo">
  Quantos gols o Brasil fez n acopa passada?
+</div>
+<div class="cartao__conteudo__resposta"></div>
+O CSS é uma linguagem de estilização
+</div> 
+    </article>
+    article class="cartão">
+        <div class="cartão__conteudoarticle class="cartão">
+        <div class="cartão__conteudo">
+<h3>programação</h3>
+<div class="cartão__conteudoarticle class="cartão">
+        <div class="cartão__conteudo">
+<h3>programação</h3>
+<div class="cartão__conteudo">
+ Quanto é 4+4?
+</div>
+<div class="cartao__conteudo__resposta"></div>
+O CSS é uma linguagem de estilização
+</div> 
+    </article>
+ Quanto é 1+1?
+</div>
+<div class="cartao__conteudo__resposta"></div>
+O CSS é uma linguagem de estilização
+</div> 
+    </article>
+<h3>programação</h3>
+<div class="cartão__conteudoarticle class="cartão">
+        <div class="cartão__conteudo">
+<h3>programação</h3>
+<div class="cartão__conteudo">
+ quanto é 10+10?
+</div>
+<div class="cartao__conteudo__resposta"></div>
+O CSS é uma linguagem de estilização
+</div> 
+    </article>
+</div>
+<div class="cartao__conteudo__resposta"></div>
+O CSS é uma linguagem de estilização
+</div> 
+    </article>
+    article class="cartão">
+        <div class="cartão__conteudo">
+<h3>programação</h3>
+<div class="cartão__conteudo">
+  EM Quantos times o vini ja jogou? 
+</div>
+<div class="cartao__conteudo__resposta"></div>
+O CSS é uma linguagem de estilização
+</div> 
+    </article>
+    article class="cartão">
+        <div class="cartão__conteudo">
+<h3>programação</h3>
+<div class="cartão__conteudo">
+ voce quer o titi como tecnico do Brasil de novo?
 </div>
 <div class="cartao__conteudo__resposta"></div>
 O CSS é uma linguagem de estilização
