--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@ O CSS é uma linguagem de estilização
 </section>
     </main> 
     <footer>
+         <script src="app.js"></script>
+    <script src="perguntas.js"></script>
 <p>projeto do alura do Miguel Inacio Barbosa, sem fins lucrativos</p>
     </footer>
 </body>
