--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ O CSS é uma linguagem de estilização
  Quanto é 1+1?
 </div>
 <div class="cartao__conteudo__resposta"></div>
-O CSS é uma linguagem de estilização
+quanto é 2+2?
 </div> 
     </article>
 <h3>programação</h3>
@@ -80,12 +80,12 @@ O CSS é uma linguagem de estilização
  quanto é 10+10?
 </div>
 <div class="cartao__conteudo__resposta"></div>
-O CSS é uma linguagem de estilização
+quantos anos o pedro tem?
 </div> 
     </article>
 </div>
 <div class="cartao__conteudo__resposta"></div>
-O CSS é uma linguagem de estilização
+o que tem seis oernas a noite?
 </div> 
     </article>
     article class="cartão">
@@ -95,7 +95,7 @@ O CSS é uma linguagem de estilização
   EM Quantos times o vini ja jogou? 
 </div>
 <div class="cartao__conteudo__resposta"></div>
-O CSS é uma linguagem de estilização
+se o pato botar o ovo na janela pra qual lado ele cai?
 </div> 
     </article>
     article class="cartão">
@@ -106,7 +106,7 @@ O CSS é uma linguagem de estilização
  voce quer o titi como tecnico do Brasil de novo?
 </div>
 <div class="cartao__conteudo__resposta"></div>
-O CSS é uma linguagem de estilização
+O CSS é
 </div> 
     </article>
 </section>
